--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
-<h1>Hi,Savio</h1>
-<marquee>poda pattti </marquee>
-<h2>sheeeeeeeeeeeeeeesh</h2>
+<html>
+<head>
+<title> ACTIVITY 13 {REVISION} </title>
+</head>
+<body>
+<h1 align=center> <u> <b> MONTHLY REPORT </b> </u> </h1>
+
+<table border=1 bordercolor=blue bgcolor=red width=50% align=center 
+cellpadding=10 cellspacing=10>
+
+<tr bordercolor=orange bgcolor=yellow align=center height=100px>
+<th>Saleperson</th> <th>Monitor</th> <th>Keyboard</th>  <th>Email Id</th>
+</tr>
+
+<tr bordercolor=indigo bgcolor=pink align=center height=100px>
+<td>savio</td> <td>25</td> <td>12</td> <td>sasasasa@gmail.com</td>
+
+<tr bordercolor=skyblue bgcolor=pink align=center height=100px>
+<td>naser</td> <td>15</td> <td>21</td> <td>gergy@gmail.com</td>
+
+<tr bordercolor=green bgcolor=pink align=center height=100px>
+<td>felix</td> <td>3</td> <td>44</td> <td>xxxx@gmail.com</td>
+
+<tr bordercolor=green bgcolor=pink align=center height=100px>
+<td>vadel</td> <td>4</td> <td>5</td> <td>damy@gmail.com</td>
+
+</table>
+</body>
+</html>
