--- a/index.html
+++ b/index.html
@@ -1,29 +1,14 @@
-<html>
-<head>
-<title> sususususususu </title>
-</head>
-<body>
-<h1 align=center> <u> <b> is this wrking </b> </u> </h1>
 
-<table border=1 bordercolor=blue bgcolor=red width=50% align=center 
-cellpadding=10 cellspacing=10>
-
-<tr bordercolor=orange bgcolor=yellow align=center height=100px>
-<th>Saleperson</th> <th>Monitor</th> <th>Keyboard</th>  <th>Email Id</th>
-</tr>
-
-<tr bordercolor=indigo bgcolor=pink align=center height=100px>
-<td>savio</td> <td>25</td> <td>12</td> <td>sasasasa@gmail.com</td>
-
-<tr bordercolor=skyblue bgcolor=pink align=center height=100px>
-<td>naser</td> <td>15</td> <td>21</td> <td>gergy@gmail.com</td>
-
-<tr bordercolor=green bgcolor=pink align=center height=100px>
-<td>felix</td> <td>3</td> <td>44</td> <td>xxxx@gmail.com</td>
-
-<tr bordercolor=green bgcolor=pink align=center height=100px>
-<td>vadel</td> <td>4</td> <td>5</td> <td>damy@gmail.com</td>
-
-</table>
-</body>
-</html>
+<link rel="stylesheet" href="gg.css"
+<div class="card">
+  
+  <img src="dayum cat.jpg" alt="John" style="width:40%">
+  <h1>Savio Jude</h1>
+  <p class="title">STUDENT</p>
+  <p>ABU-DHABI INDIAN SCHOOL, ABUDHABI</p>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-dribbble"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-twitter"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-facebook"></i></a>
+  <p><button>Contact</button></p>
+</div>
