--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="gg.css"
 <div class="card">
   
-  <img src="dayum cat.jpg" alt="John" style="width:40%">
+  <img src="dayum cat.jpg" alt="John" style="width:40%" align= center>
   <h1>Savio Jude</h1>
   <p class="title">STUDENT</p>
   <p>ABU-DHABI INDIAN SCHOOL, ABUDHABI</p>
